IMP IJ2 Round position to fix 1px shift into Firefox

--- a/front/demo/table.scss
+++ b/front/demo/table.scss
@@ -5,6 +5,7 @@ body {
 
 table {
 	background: lightgray;
+	border-collapse: collapse;
 	height: 100%;
 	width: 100%;
 
